--- a/app/src/main/res/layout/item_car.xml
+++ b/app/src/main/res/layout/item_car.xml
@@ -2,10 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    tools:background="@color/black"
     android:id="@+id/root_view"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    tools:background="@color/black">
 
     <ImageView
         android:id="@+id/item_car_image"
@@ -17,13 +17,23 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
+    <View
+        android:id="@+id/gradient_image_footer"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/margin_x_x_x_x_huge"
+        android:background="@drawable/background_gradient"
+        app:layout_constraintBottom_toBottomOf="@id/item_car_image"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <TextView
-        style="@style/tv_style_normal_text"
         android:id="@+id/item_car_title_tv"
+        style="@style/tv_style_header_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_intermediate"
         android:layout_marginEnd="@dimen/margin_x_large"
+        android:layout_marginBottom="@dimen/margin_x_small"
         android:maxLines="2"
         app:layout_constraintBottom_toBottomOf="@id/item_car_image"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,12 +42,13 @@
 
     <TextView
         android:id="@+id/item_car_date_tv"
+        style="@style/tv_style_secondary_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_intermediate"
+        android:layout_marginTop="@dimen/margin_small"
         android:layout_marginEnd="@dimen/margin_x_large"
         android:maxLines="2"
-        style="@style/tv_style_normal_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/item_car_image"
@@ -46,16 +57,17 @@
 
     <TextView
         android:id="@+id/item_car_description_tv"
+        style="@style/tv_style_normal_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_intermediate"
+        android:layout_marginTop="@dimen/margin_medium"
         android:layout_marginEnd="@dimen/margin_x_large"
+        android:layout_marginBottom="@dimen/margin_x_large"
         android:maxLines="2"
-        style="@style/tv_style_normal_text"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="@dimen/margin_small"
         app:layout_constraintTop_toBottomOf="@id/item_car_date_tv"
         tools:text="29 November 2017, 12:12" />
 
